--- a/task-player-navigation/index.html
+++ b/task-player-navigation/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Player navigation</title>
 </head>
 <body>
+  <div id="playerArea">
   <div id="player"></div>
+  </div>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
