create setTarget function

--- a/task-player-navigation/index.html
+++ b/task-player-navigation/index.html
@@ -6,8 +6,11 @@
   <title>Player navigation</title>
 </head>
 <body>
+  <div class="wrapper">
   <div id="playerArea">
   <div id="player"></div>
+  </div>
+  <div id="targetArea"></div>
   </div>
   <script type="text/javascript" src="main.js"></script>
 </body>
