--- a/task-player-navigation/index.html
+++ b/task-player-navigation/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Player navigation</title>
-</head>
-<body>
-  <div class="wrapper">
-  <div id="playerArea">
-  <div id="player"></div>
-  </div>
-  <div id="targetArea"></div>
-  </div>
-  <script type="text/javascript" src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Player navigation</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div id="playerArea">
+        <div id="player"></div>
+      </div>
+      <div id="targetArea"></div>
+    </div>
+    <script type="text/javascript" src="main.js"></script>
+  </body>
 </html>
