add set max amount and verify max amount functions

--- a/task-list-of-users/index.html
+++ b/task-list-of-users/index.html
@@ -25,8 +25,8 @@
       <button class="addEmployee">Add New emplyee</button>
     </div>
     <div class="maxAmountOfEmployees">
-      <div class="currentMaxAmount">Current max amount of employees: <span>10</span></div>
-      <input type="text" name="maxAmount" placeholder="10">
+      <div class="currentMaxAmount">Current max amount of employees: <span id="maxAmount">10</span></div>
+      <input type="text" name="setMaxAmount" placeholder="10">
       <button>Set max amount of users</button>
     </div>
   </div>
