--- a/task-list-of-users/index.html
+++ b/task-list-of-users/index.html
@@ -29,6 +29,16 @@
       <input type="text" name="setMaxAmount" placeholder="10">
       <button>Set max amount of users</button>
     </div>
+    <div>
+    <br/>
+      <div class="currentMaxAmount">
+        Total number of employees: 
+        <span id="totalNumber">1</span>
+        <br/> 
+        Average employees salary $: 
+        <span id="averageSalary">1000</span> 
+      </div>
+    </div>
   </div>
   <script type="text/javascript" src="js/app.js"></script>
 </body>
